--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ a{
 #p1-tagline>h1{
     font-size: 6rem;
     white-space: nowrap;
-    font-family: gilroy-b;
+    font-family: gilroy;
     font-weight: 100;
 }
 
